# dogan

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  b  r
config/: example.yml
gimp/: blue_city.xcf  blue_road_n_s.xcf  blue_road_ne_sw.xcf  blue_road_nw_se.xcf  blue_settlement.xcf  boat.xcf  brick.xcf  desert.xcf  orange_city.xcf  orange_road_n_s.xcf  orange_road_ne_sw.xcf  orange_road_nw_se.xcf  orange_settlement.xcf  politics.xcf  red_city.xcf  red_dice_1.xcf  red_dice_2.xcf  red_dice_3.xcf  red_dice_4.xcf  red_dice_5.xcf  red_dice_6.xcf  red_road_n_s.xcf  red_road_ne_sw.xcf  red_road_nw_se.xcf  red_settlement.xcf  rgba_headers.py  science.xcf  sheep.xcf  stone.xcf  trade.xcf  water.xcf  water_border.xcf  wheat.xcf  white_city.xcf  white_road_n_s.xcf  white_road_ne_sw.xcf  white_road_nw_se.xcf  white_settlement.xcf  wood.xcf  yellow_dice_1.xcf  (+5 more)
include/: Sprite.hh  blue_settlement.hh  brick.hh  config.hh  desert.hh  dogan.hh  enums.hh  orange_road_n_s.hh  orange_road_ne_sw.hh  orange_settlement.hh  player.hh  red_road_ne_sw.hh  sheep.hh  sprites.hh  stone.hh  water_border.hh  wheat.hh  white_city.hh  white_road_n_s.hh  white_road_ne_sw.hh  white_road_nw_se.hh  wood.hh
include/sprites/: blue_city.hh  blue_road_n_s.hh  blue_road_ne_sw.hh  blue_road_nw_se.hh  boat.hh  brick.hh  desert.hh  orange_city.hh  orange_road_n_s.hh  orange_road_nw_se.hh  politics.hh  red_city.hh  red_dice_1.hh  red_dice_2.hh  red_dice_3.hh  red_dice_4.hh  red_dice_5.hh  red_dice_6.hh  red_road_n_s.hh  red_road_nw_se.hh  red_settlement.hh  science.hh  stone.hh  trade.hh  white_settlement.hh  wood.hh  yellow_dice_1.hh  yellow_dice_2.hh  yellow_dice_3.hh  yellow_dice_4.hh  yellow_dice_5.hh  yellow_dice_6.hh
src/: config_parser.cpp  dogan_draw.cpp  draw.cpp  init.cpp  main.c  main.cpp
